--- a/bin/view/Customer.fxml
+++ b/bin/view/Customer.fxml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerController">
    <children>
-      <TableView AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columns>
-          <TableColumn maxWidth="1.7976931348623157E308" prefWidth="140.0" text="Họ tên" />
-          <TableColumn maxWidth="1.7976931348623157E308" prefWidth="140.0" text="Email" />
-            <TableColumn maxWidth="1.7976931348623157E308" prefWidth="140.0" text="Số điện thoại" />
-        </columns>
-      </TableView>
+      <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <TableView BorderPane.alignment="CENTER">
+              <columns>
+                  <TableColumn prefWidth="130.0" text="Mã khách hàng" />
+                  <TableColumn prefWidth="119.0" text="Mã tài khoản" />
+                <TableColumn maxWidth="1.7976931348623157E308" prefWidth="200.0" text="Họ tên" />
+                <TableColumn maxWidth="1.7976931348623157E308" prefWidth="199.0" text="Email" />
+                  <TableColumn maxWidth="1.7976931348623157E308" prefWidth="119.0" text="Số điện thoại" />
+              </columns>
+               <BorderPane.margin>
+                  <Insets bottom="10.0" />
+               </BorderPane.margin>
+            </TableView>
+         </center>
+         <bottom>
+            <AnchorPane stylesheets="@../css/button.css" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox AnchorPane.leftAnchor="0.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#AddAction" text="Thêm" />
+                     </children>
+                  </HBox>
+                  <HBox spacing="10.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#EditAction" text="Sửa" />
+                        <Button mnemonicParsing="false" onAction="#DeleteAction" text="Xóa" />
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+         </bottom>
+      </BorderPane>
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </AnchorPane>
