--- a/bin/view/Login.fxml
+++ b/bin/view/Login.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController" UserData="Đăng nhập">
+<BorderPane UserData="Đăng nhập" prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <center>
       <VBox prefHeight="508.0" prefWidth="693.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -19,7 +19,7 @@
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin></Label>
-            <PasswordField fx:id="password"/>
+            <PasswordField fx:id="password" onKeyPressed="#Pasword_KeyPress" />
             <BorderPane>
                <center>
                   <Button mnemonicParsing="false" onAction="#LoginButton_Press" text="Đăng nhập" BorderPane.alignment="CENTER">
