--- a/src/view/Account.fxml
+++ b/src/view/Account.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AccountController">
+<AnchorPane stylesheets="@../css/hyperlink.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AccountController">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -23,10 +26,10 @@
                         <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                      </VBox.margin>
                   </Label>
-                  <Hyperlink text="Đăng xuất" />
-                  <Hyperlink text="Thay đổi mật khẩu" />
-                  <Hyperlink text="Thay đổi tên hiển thị" />
-                  <Hyperlink text="Đổi avater" />
+                  <Hyperlink onAction="#Logout" text="Đăng xuất" />
+                  <Hyperlink onAction="#ChangePass" text="Thay đổi mật khẩu" />
+                  <Hyperlink onAction="#ChangeNickname" text="Thay đổi tên hiển thị" />
+                  <Hyperlink onAction="#ChangeAvatar" text="Đổi avatar" />
                </children>
                <BorderPane.margin>
                   <Insets right="40.0" />
@@ -36,17 +39,18 @@
          <center>
             <GridPane hgap="5.0" BorderPane.alignment="CENTER">
                <children>
-                  <Hyperlink alignment="CENTER" text="Cập nhật thông tin cá nhân" textAlignment="CENTER" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" />
+                  <Hyperlink alignment="CENTER" onAction="#UpdateInfo" text="Cập nhật thông tin cá nhân" textAlignment="CENTER" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" />
                   <Label text="Tài khoản" GridPane.rowIndex="1" />
                   <Label text="Mật khẩu" GridPane.rowIndex="2" />
                   <Label text="Tên hiển thị" GridPane.rowIndex="3" />
                   <Label text="Avatar" GridPane.rowIndex="4" />
                   <Label text="Họ và tên" GridPane.rowIndex="5" />
-                  <Label text="Ngày sinh" GridPane.rowIndex="6" />
-                  <Label text="Email" GridPane.rowIndex="7" />
-                  <Label text="Số điện thoại" GridPane.rowIndex="8" />
-                  <Label text="Địa chỉ" GridPane.rowIndex="9" />
-                  <Label text="Ngày vào làm" GridPane.rowIndex="10" />
+                  <Label text="Giới tính" GridPane.rowIndex="6" />
+                  <Label text="Ngày sinh" GridPane.rowIndex="7" />
+                  <Label text="Email" GridPane.rowIndex="8" />
+                  <Label text="Số điện thoại" GridPane.rowIndex="9" />
+                  <Label text="Địa chỉ" GridPane.rowIndex="10" />
+                  <Label text="Ngày vào làm" GridPane.rowIndex="11" />
                   <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="4.0" />
@@ -62,6 +66,7 @@
                         <Insets left="4.0" />
                      </GridPane.margin>
                   </Label>
+                  <ImageView fitHeight="200.0" fitWidth="166.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="4.0" />
@@ -72,6 +77,7 @@
                         <Insets left="4.0" />
                      </GridPane.margin>
                   </Label>
+                  <Hyperlink onAction="#CopyEmail" text="Hyperlink" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                   <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="8">
                      <GridPane.margin>
                         <Insets left="4.0" />
@@ -87,8 +93,11 @@
                         <Insets left="4.0" />
                      </GridPane.margin>
                   </Label>
-                  <Hyperlink text="Hyperlink" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <ImageView fitHeight="200.0" fitWidth="166.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label layoutX="110.0" layoutY="475.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="11">
+                     <GridPane.margin>
+                        <Insets left="4.0" />
+                     </GridPane.margin>
+                  </Label>
                </children>
                <columnConstraints>
                   <ColumnConstraints />
@@ -100,6 +109,7 @@
                   <RowConstraints prefHeight="29.0" />
                   <RowConstraints prefHeight="29.0" />
                   <RowConstraints />
+                  <RowConstraints prefHeight="29.0" />
                   <RowConstraints prefHeight="29.0" />
                   <RowConstraints prefHeight="29.0" />
                   <RowConstraints prefHeight="29.0" />
